[gd_scene load_steps=6 format=3 uid="uid://c2xfnv5r1cyvf"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_kjcn7"]
[ext_resource type="FontFile" uid="uid://g0e4g4332ft0" path="res://assets/Fonts/Raw/CC Wild Words Roman.ttf" id="1_y3r6p"]
[ext_resource type="FontFile" uid="uid://cth60gqdxo73p" path="res://assets/Fonts/Raw/continuum bold.ttf" id="2_kirry"]
[ext_resource type="Script" path="res://scripts/LinkButton.gd" id="3_cytqu"]
[ext_resource type="Texture2D" uid="uid://26wqrar1o8aw" path="res://icon.png" id="4_r0oo4"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjcn7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer1" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_y3r6p")
theme_override_font_sizes/font_size = 100
text = "Tutorial 6"
uppercase = true

[node name="StageSelectMenu" type="Control" parent="HBoxContainer/VBoxContainer1"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer1/StageSelectMenu"]
layout_mode = 2
offset_left = -1.0
offset_top = -9.0
offset_right = 569.0
offset_bottom = 74.0

[node name="Level1Button" type="LinkButton" parent="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.729412, 0, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.603922, 0.576471, 1)
theme_override_fonts/font = ExtResource("2_kirry")
theme_override_font_sizes/font_size = 24
text = "Level 1"

[node name="Level2Button" type="LinkButton" parent="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.729412, 0, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.603922, 0.576471, 1)
theme_override_fonts/font = ExtResource("2_kirry")
theme_override_font_sizes/font_size = 24
text = "Level 2"

[node name="BackButton" type="LinkButton" parent="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.729412, 0, 1)
theme_override_colors/font_hover_color = Color(0.192157, 0.603922, 0.576471, 1)
theme_override_fonts/font = ExtResource("2_kirry")
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer1"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer1/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.729412, 0, 1)
theme_override_colors/font_hover_color = Color(0.192472, 0.603573, 0.576459, 1)
theme_override_fonts/font = ExtResource("2_kirry")
theme_override_font_sizes/font_size = 24
text = "New Game"
script = ExtResource("3_cytqu")
scene_to_load = "Level 1"

[node name="LinkButton2" type="LinkButton" parent="HBoxContainer/VBoxContainer1/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.729412, 0, 1)
theme_override_colors/font_hover_color = Color(0.192472, 0.603573, 0.576459, 1)
theme_override_fonts/font = ExtResource("2_kirry")
theme_override_font_sizes/font_size = 24
text = "Stage Select"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_r0oo4")
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3/Level1Button" to="." method="_on_Level_1_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3/Level2Button" to="." method="_on_Level_2_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer1/StageSelectMenu/VBoxContainer3/BackButton" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer1/VBoxContainer2/LinkButton" to="HBoxContainer/VBoxContainer1/VBoxContainer2/LinkButton" method="_on_New_Game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer1/VBoxContainer2/LinkButton2" to="." method="_on_Link_Button_2_pressed"]
